# testlib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: debug.md  documentar.md  mejorar.md  planificar.md
src/testlib/: __init__.py  logging_config.py
src/testlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/testlib/images/: __init__.py  visualization.py
src/testlib/images/transform/: __init__.py  filters.py
src/testlib/signals/: __init__.py  filter.py
tests/: test_filters.py  test_images.py
