[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "testlib"
dynamic = ["version"]
description = "Librería para enseñar a instalar nuestra propia lib"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Fulano"},
    {name = "Mengano"}
]

keywords = [
    "EEG",
    "ECG",
    "EMG",
    "signal processing",
    "image processing",
    "biomedical engineering",
    "Python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "pyqtgraph>=0.13",
    "PyQt5>=5.15"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "build>=1.0",
    "twine>=4.0"
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = {attr = "testlib.version.__version__"}


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"


[tool.black]
line-length = 88
target-version = ["py311"]


[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]
ignore = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"